# ri-ctc-calculator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  PROJECT_STATUS.md  QUICK_START.md  README.md  RI_VARIABLE_REFERENCE.md  STYLING_UPDATES.md  all_households_with_children_in_poverty.csv  app.py  data_exploration_ri1.ipynb  data_exploration_ri2.ipynb  governor_proposal_ri1.ipynb  governor_proposal_ri1_results.csv  governor_proposal_ri2.ipynb  governor_proposal_ri2_results.csv  households_closest_to_poverty_line.csv  households_lifted_out_of_poverty.csv  next_closest_to_poverty_line.csv  poverty_analysis.py  pyproject.toml  requirements.txt  ri1_dataset_summary_weighted.csv  ri2_dataset_summary_weighted.csv  test.ipynb  test_api_flow.py  test_deployed_api_test9.py  test_exemption_fix.py
.github/workflows/: deploy-backend.yml  deploy-modal.yml
.vercel/: project.json
backend/: .dockerignore  Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
dynamic_charts/: generate_charts.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/apiLib/: api.ts  types.ts
frontend/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/components/: AggregateImpact.tsx  HouseholdForm.tsx  ImpactAnalysis.tsx  SampleFamilyImpacts.tsx
frontend/hooks/: useAggregateImpact.ts  useHouseholdImpact.ts
frontend/lib/: api.ts  buildHousehold.ts  (+5 more)
ri_ctc_calc/: __init__.py
scripts/: modal_precompute.py  modal_serve.py  precompute_presets.py
tests/: test_household.py
(+16 files in other folders)
